# pose-estimation

./: .dvcignore  .gitignore  README.md  dvc.yaml  pyproject.toml  requirements-kaggle.txt  requirements-teacher.txt
.dvc/: config
configs/: README.md
configs/filtering/: crops_default.json  pseudo_labels_default.json
configs/student/: rtmpose_tiny_baseline.json
configs/teacher/: vitpose_teacher.json
configs/training/: student_baseline.json
docs/: KAGGLE_TRAINING.md  PROGRESS.md  PSEUDO_LABEL_QA.md  TEACHER_SELECTION.md
notebooks/: README.md  kaggle_full_pipeline.ipynb  kaggle_teacher_pseudolabeling.ipynb  kaggle_train_student.ipynb
scripts/: benchmark_student_speed.py  build_coco_pose_dataset.py  export_dataset.py  extract_nuscenes_pedestrian_crops.py  filter_crops.py  filter_pseudo_labels.py  generate_dummy_pseudo_labels.py  prepare_nuscenes_dataroot.py  run_hf_vitpose_teacher.py  run_teacher_inference.py  train_student.py  validate_nuscenes_files.py  visualize_crops.py  visualize_keypoints.py  visualize_student_predictions.py
src/dataset/: coco_pose.py  export_dataset.py  filter_crops.py  filter_pseudo_labels.py  nuscenes_pedestrian_crops.py  validate_nuscenes_files.py
src/evaluation/: speed.py
src/inference/: student.py
src/models/: __init__.py  simple_pose.py
src/teacher/: __init__.py  dummy_teacher.py  hf_vitpose_teacher.py  mmpose_teacher.py
src/training/: __init__.py  coco_pose_dataset.py  metrics.py  train.py
src/visualization/: __init__.py  crops.py  keypoints.py  student_predictions.py
